--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -15,8 +15,23 @@
 
     <!-- Модель House -->
     <div class="first_model_name _subtitle">Houses</div>
-    <div th:each="house : ${houses}">
-        <a class="_button" th:href="@{'/show/house/{id}'(id=${house.id})}" th:text="${house.number}">model</a>
+    <form action="/search" method="GET">
+        <div class="_container">
+            <input class="_input" type="hidden" name="modelName" th:value="House"/>
+            <input class="_input" type="text" name="fieldName" placeholder="Insert search field"/>
+            <input class="_input" type="text" name="fieldValue" placeholder="Insert value"/>
+            <button class="_button" type="submit">Find</button>
+        </div>
+    </form>
+    <div th:if="${searchResults != null}">
+        <div th:each="result : ${searchResults}">
+            <a class="_button" th:href="@{'/show/house/{id}'(id=${result.id})}" th:text="${result.number}">model</a>
+        </div>
+    </div>
+    <div th:unless="${searchResults != null}">
+        <div th:each="house : ${houses}">
+            <a class="_button" th:href="@{'/show/house/{id}'(id=${house.id})}" th:text="${house.number}">model</a>
+        </div>
     </div>
     <div class="_button_add">
         <a th:href="@{/new/house}">Create new</a>
@@ -24,6 +39,14 @@
 
     <!-- Модель Job -->
     <div class="second_model_name _subtitle">Jobs</div>
+    <form action="/search" method="GET">
+        <div class="_container">
+            <input class="_input" type="hidden" name="modelName" th:value="job"/>
+            <input class="_input" type="text" name="fieldName" placeholder="Insert search field"/>
+            <input class="_input" type="text" name="fieldValue" placeholder="Insert value"/>
+            <button class="_button" type="submit">Find</button>
+        </div>
+    </form>
     <div th:each="job : ${jobs}">
         <a class="_button" th:href="@{'/show/job/{id}'(id=${job.id})}" th:text="${job.name}">model</a>
     </div>
@@ -33,6 +56,14 @@
 
     <!-- Модель Person -->
     <div class="first_model_name _subtitle">People</div>
+    <form action="/search" method="GET">
+        <div class="_container">
+            <input class="_input" type="hidden" name="modelName" th:value="person"/>
+            <input class="_input" type="text" name="fieldName" placeholder="Insert search field"/>
+            <input class="_input" type="text" name="fieldValue" placeholder="Insert value"/>
+            <button class="_button" type="submit">Find</button>
+        </div>
+    </form>
     <div th:each="person : ${people}">
         <a class="_button" th:href="@{'/show/person/{id}'(id=${person.id})}" th:text="${person.surname}">model</a>
     </div>
@@ -42,6 +73,14 @@
 
     <!-- Модель Pet -->
     <div class="third_model_name _subtitle">Pets</div>
+    <form action="/search" method="GET">
+        <div class="_container">
+            <input class="_input" type="hidden" name="modelName" th:value="pet"/>
+            <input class="_input" type="text" name="fieldName" placeholder="Insert search field"/>
+            <input class="_input" type="text" name="fieldValue" placeholder="Insert value"/>
+            <button class="_button" type="submit">Find</button>
+        </div>
+    </form>
     <div th:each="pet : ${pets}">
         <a class="_button" th:href="@{'/show/pet/{id}'(id=${pet.id})}" th:text="${pet.name}">model</a>
     </div>
@@ -51,6 +90,14 @@
 
     <!-- Модель Transport -->
     <div class="fourth_model_name _subtitle">Transport</div>
+    <form action="/search" method="GET">
+        <div class="_container">
+            <input class="_input" type="hidden" name="modelName" th:value="transport"/>
+            <input class="_input" type="text" name="fieldName" placeholder="Insert search field"/>
+            <input class="_input" type="text" name="fieldValue" placeholder="Insert value"/>
+            <button class="_button" type="submit">Find</button>
+        </div>
+    </form>
     <div th:each="transport : ${transports}">
         <a class="_button" th:href="@{'/show/transport/{id}'(id=${transport.id})}" th:text="${transport.company} + ' ' + ${transport.model}">model</a>
     </div>
