--- a/src/main/resources/templates/show.html
+++ b/src/main/resources/templates/show.html
@@ -37,19 +37,34 @@
         <div class="_text_container _container">
             <p class="_text">Name: <span th:text="${modelObject.surname}"></span></p>
             <p class="_text">Surname: <span th:text="${modelObject.name}"></span></p>
-            <p class="_text">Surname: <span th:text="${modelObject.patronymic}"></span></p>
-            <p class="_text">Surname: <span th:text="${modelObject.age}"></span></p>
+            <p class="_text">Patronymic: <span th:text="${modelObject.patronymic}"></span></p>
+            <p class="_text">Age: <span th:text="${modelObject.age}"></span></p>
+
+            <!-- Добавляем условие для вывода информации о доме и работе, если они есть -->
+            <div th:if="${house != null}">
+                <p class="_text">House: <span th:text="${modelObject.house.number}"></span></p>
+            </div>
+            <div th:if="${job != null}">
+                <p class="_text">Job: <span th:text="${modelObject.job.name}"></span></p>
+            </div>
+
+            <div th:each="pet : ${modelObject.pets}">
+                <p class="_text">Pet: <span th:text="${pet.name}"></span></p>
+            </div>
+            <div th:each="transport : ${modelObject.transports}">
+                <p class="_text">Transport: <span th:text="${transport.model}"></span></p>
+            </div>
 
             <a class="_button" th:href="@{'/edit/person/{id}'(id=${modelObject.id})}">Edit</a>
 
-
-        <form th:action="@{/delete}" method="post" th:object="${modelObject}">
-            <input type="hidden" th:name="modelName" th:value="${modelName}" />
-            <input type="hidden" th:name="id" name="id" th:value="${modelObject.id}" />
-            <button class="_button" type="submit">Delete</button>
-        </form>
+            <form th:action="@{/delete}" method="post" th:object="${modelObject}">
+                <input type="hidden" th:name="modelName" th:value="${modelName}" />
+                <input type="hidden" th:name="id" name="id" th:value="${modelObject.id}" />
+                <button class="_button" type="submit">Delete</button>
+            </form>
         </div>
     </div>
+
 
     <div th:if="${modelName == 'job'}">
         <div class="_subtitle">Job Details:</div>
